# scorepyo

./: .buildinfo  .gitignore  API.html  CNAME  LICENSE  README.md  bootstrap.py  changelog.md  codepal.py  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  welcome.html
.github/workflows/: python-package.yml
_autosummary/: scorepyo.binarizers.html  scorepyo.calibration.html  scorepyo.exceptions.html  scorepyo.html  scorepyo.models.html  scorepyo.preprocessing.html  scorepyo.ranking.html
_sources/: API.rst  welcome.md
_sources/_autosummary/: scorepyo.binarizers.rst  scorepyo.calibration.rst  scorepyo.exceptions.rst  scorepyo.models.rst  scorepyo.preprocessing.rst  scorepyo.ranking.rst  scorepyo.rst
_sources/autoapi/: index.rst
_sources/autoapi/conftest/: index.rst
_sources/autoapi/scorepyo/: index.rst
_sources/autoapi/scorepyo/_utils/: index.rst
_sources/autoapi/scorepyo/binarizers/: index.rst
_sources/autoapi/scorepyo/calibration/: index.rst
_sources/autoapi/scorepyo/exceptions/: index.rst
_sources/autoapi/scorepyo/models/: index.rst
_sources/autoapi/scorepyo/preprocessing/: index.rst
_sources/autoapi/scorepyo/ranking/: index.rst
_sources/autoapi/test_binarizer/: index.rst
_sources/autoapi/test_models/: index.rst
_sources/autoapi/test_scorepyo/: index.rst
_sources/depth_binarizer/: binarizer.md
_sources/depth_model/: misc.md  model.md
_sources/tutorials/: context.md  example.ipynb  installation.md
autoapi/: index.html
autoapi/conftest/: index.html
autoapi/scorepyo/: index.html
autoapi/scorepyo/_utils/: index.html
autoapi/scorepyo/binarizers/: index.html
autoapi/scorepyo/calibration/: index.html
autoapi/scorepyo/exceptions/: index.html
autoapi/scorepyo/models/: index.html
autoapi/scorepyo/preprocessing/: index.html
autoapi/scorepyo/ranking/: index.html
autoapi/test_binarizer/: index.html
autoapi/test_models/: index.html
autoapi/test_scorepyo/: index.html
config/: .isort.cfg  .pylintrc  bandit.yml  mypy.ini
core_module/: MANIFEST.in  pyproject.toml  setup.cfg
core_module/scorepyo/: _utils.py  binarizers.py  binary_featurizer.py  calibration.py  exceptions  exceptions.py  models.py  preprocessing.py  ranking.py  repository.py
core_module/tests/: conftest.py  test_binarizer.py  test_models.py  test_scorepyo.py
depth_binarizer/: binarizer.html
depth_model/: misc.html  model.html
docs/: API.rst  _config.yml  _toc.yml  welcome.md
docs/depth_binarizer/: binarizer.md
docs/depth_model/: misc.md  model.md
docs/source/: conf.py  index.rst
docs/source/_static/css/: qb1-sphinx-rtd.css  theme-overrides.css
docs/source/_templates/: breadcrumbs.html
docs/source/_templates/autosummary/: module.rst
docs/source/introduction/: introduction.md
docs/source/module_docs/: scorepyo.binary_featurizer.AutomaticBinaryFeaturizer.rst  scorepyo.binary_featurizer.rst  scorepyo.exceptions.MinPointOverMaxPointError.rst  scorepyo.exceptions.MissingColumnError.rst  scorepyo.exceptions.NegativeValueError.rst  scorepyo.exceptions.NonBooleanValueError.rst  scorepyo.exceptions.NonIntegerValueError.rst  scorepyo.exceptions.NumericCheck.rst  scorepyo.exceptions.rst  scorepyo.models.OptunaScoreCard.rst  scorepyo.models.rst  scorepyo.rst
docs/source/notebooks/: example.ipynb  uploading_example_data.ipynb
docs/tutorials/: context.md  example.ipynb  installation.md
docs_jupyter/: welcome.md
docs_jupyter/depth_binarizer/: binarizer.md
docs_jupyter/depth_model/: model.md
docs_jupyter/tutorials/: example.ipynb
notebooks/: adult_data.ipynb  benchmark.py  comparison_heart_data.ipynb  comparison_spam_data.ipynb  debug_test.ipynb  demo.ipynb  demo_script.ipynb  example.ipynb  intuition.ipynb  nb_to_delete_for_docs_.ipynb  run_benchmark.ipynb  to_delete.ipynb  understanding_difference.ipynb
source/: conf.py  index.rst
source/_static/: full_scorepyo_logo.eps
tutorials/: context.html  example.html  installation.html
