[metadata]
name = scorepyo
author = S. Kaddani
description = This is the scorepyo repository.
long_description = file: README.md
keywords = scorepyo risk score 
license = MIT # what should be a good default?
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    pandas>=1.4.4
    pandera==0.13.4
    scikit-learn
    interpret
    optuna
    botorch
    tabulate
    # mljar-supervised

[options.extras_require]

dev = 
    black==22.3.0
    isort==5.10.1
    pytest==7.1.2
    pytest-cov==3.0.0
    pylint==2.13.8
    mypy==0.950
    bandit==1.7.4
    pip-tools # for deps pinning
    types-python-slugify==6.1.0
    pydantic==1.10.2
    pycparser==2.21
    prometheus-client==0.15.0
    plumbum==1.8.0
    ply==3.11
    pep517==0.13.0



ipy =
    ipython
    ipykernel
    ipython_genutils
    notebook
    jupyterlab

doc =
    sphinx==5.0.2
    sphinx-rtd-theme==1.0.0
    nbsphinx==0.8.9
    pygments==2.12.0
    ipython
    myst-parser==0.18.0
    sphinx-copybutton==0.5.0
    sphinx-autodoc-typehints==1.18.3
    pandoc
