[metadata]
name = scorepyo
author = S. Kaddani
version = 0.1.1
description = This is the scorepyo repository.
long_description = Scorepyo is a python package for creating risk-score type models for binary classification, based on data. The created models can be used like other ML models, with fit and predict methods.
home_page= https://github.com/drskd/scorepyo
keywords = scorepyo risk score 
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8 
install_requires =
    numpy==1.23.5
    pandas==1.5.2
    pandera==0.13.4
    scikit-learn>=1.1.3
    interpret==0.3.0
    optuna==3.0.3
    botorch==0.7.3
    tabulate==0.9.0
    cvxpy

[options.extras_require]

dev = 
    black[jupyter]==22.3.0
    isort==5.10.1
    pytest==7.1.2
    pytest-cov==3.0.0
    pylint==2.13.8
    mypy==0.950
    bandit[toml]==1.7.4
    pip-tools # for deps pinning
    types-python-slugify==6.1.0



ipy =
    ipython
    ipykernel
    ipython_genutils
    notebook
    jupyterlab

doc =
    ipython
    jupyter-book==0.13.1
    sphinx-autoapi # auto generate API doc
    ghp-import #publish on github page
